2005-08-29  Philippe De Swert <philippedeswert@scarlet.be>

	* release version 0.64 as the previous fix by Florian is quite important

2005-08-29  Florian Boor <florian.boor@kernelconcepts.de>

	* Move *.desktop.in to *.desktop.in.in to fix creating of translated
	  desktop files.
	* configure.ac:  Create *.desktop.in instead of *.desktop.
	* po/Makefile.in.in: Update.

2005-08-24  Philippe De Swert <philippedeswert@scarlet.be>

	* release version 0.63

2005-08-24  Joseph J. McCarthy <mccarthy@engrng.pitt.edu>

	* day_view.c: use new libschedule API (and change to internal schedule
	calls)
	* event-ui.c: use new libschedule API; change internal schedule calls 
	so that an errorbox can be used to warn if there are at problems
	* event-ui.h: changes to internal schedule stuff
	* main.c: use new libschedule API (and change to internal schedule 
	calls)		 

2005-08-16  Matthias Steinbauer <matthias@steinbauer.org>

        * main.c: Included basic LibOSSO Support.

2005-08-08  Matthias Steinbauer <matthias@steinbauer.org>

	* main.c: Added basic hildon support adjusted main-window to appview
	  put toolbar to the bottom.
	* event-ui.c: click_categories adjusted to fit to the hildon extensions
	  in libgpewidget.

2005-07-27  Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Remove explicit use of obsolete libdisplaymigration.
	* po/POTFILES.in, autogen.sh, configure.ac, *.am: Add autotools support
	  including hildon UI framework integration support.
	* Move gpe-calendar.png to pixmaps subdir.
	* .cvsrc: Ignore a pile of autogenerated files.
	* hildon/*: Add some files for hildon UI support.

2005-03-20  Florian Boor <florian.boor@kernelconcepts.de>
	
	* Version 0.62 released.

2005-03-14  Florian Boor <florian.boor@kernelconcepts.de>

	* Removed obsolete inclusion of render.h

2005-01-16  Phil Blundell  <philb@gnu.org>

	* Version 0.61 released.

2005-01-16  Phil Blundell  <philb@gnu.org>

	* gtkdatesel.c (get_max_month_width): New function.